--- a/src/app/pages/dashboard/header-searchbar/header-searchbar.component.scss
+++ b/src/app/pages/dashboard/header-searchbar/header-searchbar.component.scss
@@ -9,6 +9,5 @@ section {
     height: 51px;
     padding-left: 20px;
     padding-right: 20px;
-    z-index: 1001;
   }
 }
