--- a/src/app/pages/dashboard/sidenav/sidenav.component.scss
+++ b/src/app/pages/dashboard/sidenav/sidenav.component.scss
@@ -19,7 +19,6 @@ app-contacts-list {
 }
 
 .new-message {
-  z-index: 1001;
   width: 60px;
   aspect-ratio: 1;
   border-radius: 50%;
