--- a/src/styles.scss
+++ b/src/styles.scss
@@ -271,6 +271,10 @@ h4 {
   color: var(--color-gray);
 }
 
+.z-index-1001 {
+  z-index: 1001;
+}
+
 /* nunito-200 - latin */
 @font-face {
   font-display: swap;
